[project]
name = "pyrecombatseq"
version = "0.1"
requires-python = ">=3.9"

dependencies = [
  "anndata",
  "fastcluster",
  "mpmath>=1.1.0",
  "numpy",
  "pandas",
  "patsy",
  "scipy>=1.11.0,<1.16",
  "seaborn",
  "scikit-learn",
  "statsmodels>=0.14.3",
  "matplotlib",
  "jinja2"
]

[project.optional-dependencies]
doc = [
  "scanpy",
  "sphinx",
  "sphinx_rtd_theme",
  "sphinxcontrib-repl",
]

[build-system]
requires = ["setuptools", "numpy>=2.0.0", "scipy", "Cython>=3.0.0", "wheel"]
